# autodiff

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  autodiff.cpp
examples/: andgate.cpp  karpathy.cpp  matrixvector.cpp  nerf.cpp
examples/images/: sunflower.ppm  sunflower_nerf.ppm
include/autodiff/: autodiff.h  nn.h  types.h  util.h  value.h
src/: value.tpp
tests/: main.cpp  test_value.h
